refactoring repackaged code from Lucene